Implement the first step of the sign in flow

--- a/src/components/HeaderBar/HeaderBar.css
+++ b/src/components/HeaderBar/HeaderBar.css
@@ -18,8 +18,14 @@
 
 .header-bar__actions {
     margin-left: auto;
+    display: flex;
+    align-items: center;
+
+    color: white;
 }
 
-.header-bar__icon {
+.header-bar__actions__item {
     color: white;
+
+    margin-left: 20px;
 }
