Implement add header

--- a/src/components/OrgFile/components/Header/Header.css
+++ b/src/components/OrgFile/components/Header/Header.css
@@ -3,7 +3,8 @@
     margin-top: 5px;
     padding-top: 5px;
     position: relative;
-    overflowY: hidden;
+    overflow-y: hidden;
+    min-height: 23px;
 }
 
 .header--selected {
