--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -8,6 +8,26 @@
     text-align: center;
 
     font-size: 20px;
-    margin-top: 20px;
+    margin-top: 30px;
     width: 200px;
+}
+
+.landing-app-name {
+    font-size: 80px;
+    font-weight: 300;
+
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.landing-tagline {
+    font-size: 24px;
+    font-weight: 300;
+
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+.view-sample-button {
+    margin-top: 40px;
 }
