Update color scheme

--- a/src/components/HeaderBar/HeaderBar.css
+++ b/src/components/HeaderBar/HeaderBar.css
@@ -1,5 +1,5 @@
 .header-bar {
-    background-color: #3d696a;
+    background-color: #5E348C;
     height: 30px;
     display: flex;
     align-items: center;
