--- a/src/components/LoadingIndicator/LoadingIndicator.css
+++ b/src/components/LoadingIndicator/LoadingIndicator.css
@@ -1,6 +1,6 @@
 .loading-indicator {
     color: white;
-    background-color: #3d696a;
+    background-color: #5E348C;
     font-weight: bold;
     opacity: 0.9;
     padding: 18px;
