--- a/src/components/FileBrowser/FileBrowser.css
+++ b/src/components/FileBrowser/FileBrowser.css
@@ -7,6 +7,10 @@
     padding-left: 0;
 }
 
+.file-browser__file-list__icon {
+    color: #5E348C;
+}
+
 .file-browser__file-list__element {
     border-top: 1px solid #D8D8D8;
     padding: 10px;
