Update sample page to use routing

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -4,6 +4,10 @@
     align-items: center;
 }
 
+.landing-container a {
+    text-decoration: none;
+}
+
 .landing-button {
     text-align: center;
 
