--- a/src/components/HeaderBar/HeaderBar.css
+++ b/src/components/HeaderBar/HeaderBar.css
@@ -1,19 +1,32 @@
 .header-bar {
     background-color: #5E348C;
     height: 30px;
+    padding: 10px;
+
+    display: grid;
+    grid-template-columns: 5fr 1fr 5fr;
+    align-items: center;
+}
+
+.header-bar__logo-container {
     display: flex;
     align-items: center;
-    padding: 10px;
 }
 
 .header-bar__logo {
-    width: 45px;
+    width: 30px;
+}
+
+.header-bar__app-name {
+    color: white;
+    margin: 0;
+    margin-left: 5px;
 }
 
 .header-bar__title {
     color: white;
-    margin: 0;
-    margin-left: 5px;
+    text-align: center;
+    font-size: 20px;
 }
 
 .header-bar__back-button {
