Implement dnd for touch events

--- a/src/components/CaptureTemplatesEditor/CaptureTemplatesEditor.css
+++ b/src/components/CaptureTemplatesEditor/CaptureTemplatesEditor.css
@@ -1,3 +1,7 @@
+.capture-templates-container {
+    position: relative;
+}
+
 .new-capture-template-button-container {
     display: flex;
     justify-content: flex-end;
