--- a/src/components/CaptureTemplatesEditor/components/CaptureTemplate/CaptureTemplate.css
+++ b/src/components/CaptureTemplatesEditor/components/CaptureTemplate/CaptureTemplate.css
@@ -3,6 +3,8 @@
     padding: 5px;
     padding-bottom: 15px;
     margin-bottom: 15px;
+
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .capture-template-container:first-of-type {
