--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -40,4 +40,30 @@
     margin-bottom: 20px;
     box-sizing: border-box;
     text-align: center;
+
+    position: relative;
+}
+
+.settings-button-separator {
+    width: calc(100% - 20px);
+    margin-top: 0px;
+    margin-bottom: 20px;
+
+    border: none;
+    border-bottom: 1px solid #D8D8D8;
+}
+
+.changelog-badge-container {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+
+    border-radius: 50%;
+    background-color: red;
+    width: 35px;
+    height: 35px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
