--- a/src/components/OrgFile/components/ActionDrawer/ActionDrawer.css
+++ b/src/components/OrgFile/components/ActionDrawer/ActionDrawer.css
@@ -21,10 +21,10 @@
 
 .action-drawer__done-btn {
     font-weight: bold;
+    font-size: 18px;
 
     height: 60px;
     width: 100%;
-    margin-left: -10px;
 }
 
 .action-drawer__arrow-buttons-container {
