Show a message when there are no tags

--- a/src/components/OrgFile/components/TagsEditorModal/TagsEditorModal.css
+++ b/src/components/OrgFile/components/TagsEditorModal/TagsEditorModal.css
@@ -4,6 +4,11 @@
     margin-top: 0;
 }
 
+.no-tags-message {
+    color: gray;
+    text-align: center;
+}
+
 .tag-container {
     display: flex;
 
