Fix header bar on SE size when logged out

--- a/src/components/HeaderBar/HeaderBar.css
+++ b/src/components/HeaderBar/HeaderBar.css
@@ -8,6 +8,10 @@
     align-items: center;
 }
 
+.header-bar--with-logo {
+    grid-template-columns: 5fr 1fr 5fr;
+}
+
 .header-bar__logo-container {
     display: flex;
     align-items: center;
