Prettier all the files!

--- a/src/components/FileBrowser/FileBrowser.css
+++ b/src/components/FileBrowser/FileBrowser.css
@@ -1,51 +1,51 @@
 .file-browser-container a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .file-browser__header {
-    margin: 5px;
+  margin: 5px;
 }
 
 .file-browser__file-list {
-    list-style-type: none;
-    padding-left: 0;
+  list-style-type: none;
+  padding-left: 0;
 }
 
 .file-browser__file-list__icon {
-    color: #5E348C;
+  color: #5e348c;
 }
 
 .file-browser__file-list__element {
-    border-top: 1px solid #D8D8D8;
-    padding: 10px;
-    font-family: Courier;
+  border-top: 1px solid #d8d8d8;
+  padding: 10px;
+  font-family: Courier;
 }
 
 .file-browser__file-list__element:last-of-type {
-    border-bottom: 1px solid #D8D8D8;
+  border-bottom: 1px solid #d8d8d8;
 }
 
 .file-browser__file-list__element--load-more-row:last-of-type {
-    border-bottom: none;
-    text-align: center;
-    color: #5E348C;
-    font-weight: bold;
+  border-bottom: none;
+  text-align: center;
+  color: #5e348c;
+  font-weight: bold;
 }
 
 .file-browser__file-list__loading-more-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 
-    color: #5E348C;
+  color: #5e348c;
 
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .file-browser__file-list__icon--not-org {
-    color: lightgray;
+  color: lightgray;
 }
 
 .file-browser__file-list__icon--directory {
-    color: #5E348C;
+  color: #5e348c;
 }
