--- a/src/components/OrgFile/components/SyncConfirmationModal/SyncConfirmationModal.css
+++ b/src/components/OrgFile/components/SyncConfirmationModal/SyncConfirmationModal.css
@@ -1,27 +1,27 @@
 .sync-confirmation-modal__header {
-    color: #5E348C;
+  color: #5e348c;
 
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .sync-confirmation-modal__last-sync-time {
-    color: #5E348C;
+  color: #5e348c;
 
-    text-align: center;
-    font-weight: bold;
+  text-align: center;
+  font-weight: bold;
 }
 
 .sync-confirmation-modal__buttons-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    margin-top: 20px;
-    margin-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .sync-confirmation-modal__button {
-    font-size: 18px;
+  font-size: 18px;
 
-    margin-top: 15px;
+  margin-top: 15px;
 }
