--- a/src/components/CaptureTemplatesEditor/components/CaptureTemplate/CaptureTemplate.css
+++ b/src/components/CaptureTemplatesEditor/components/CaptureTemplate/CaptureTemplate.css
@@ -1,154 +1,153 @@
 .capture-template-container {
-    border-bottom: 2px solid #5E348C;
-    padding: 15px 5px;
+  border-bottom: 2px solid #5e348c;
+  padding: 15px 5px;
 
-    background-color: white;
+  background-color: white;
 
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .capture-template-container--dragging {
-    background-color: #E6E6E6;
+  background-color: #e6e6e6;
 }
 
 .capture-template-container__header {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    color: #5E348C;
+  color: #5e348c;
 }
 
 .capture-template-container__header__title {
-    font-size: 20px;
-    margin-left: -10px;
+  font-size: 20px;
+  margin-left: -10px;
 
-    max-width: calc(100% - 120px);
+  max-width: calc(100% - 120px);
 }
 
 .capture-template-container__header__caret {
-    margin-right: 15px;
-    margin-left: 5px;
+  margin-right: 15px;
+  margin-left: 5px;
 
-    transition-property: transform;
-    transition-duration: 0.15s;
+  transition-property: transform;
+  transition-duration: 0.15s;
 }
 
 .capture-template-container__header__caret--rotated {
-    transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 .capture-template-container__header__drag-handle {
-    margin-left: auto;
-    margin-right: 20px;
+  margin-left: auto;
+  margin-right: 20px;
 
-    user-select: none;
+  user-select: none;
 }
 
 .capture-template-container__content {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .capture-template__field-container {
-    margin-bottom: 5px;
-    border-bottom: 1px solid #D8D8D8;
-    padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: 1px solid #d8d8d8;
+  padding-bottom: 5px;
 }
 
 .capture-template__field-container:last-of-type {
-    border-bottom: none;
-    padding-bottom: 0;
+  border-bottom: none;
+  padding-bottom: 0;
 }
 
 .capture-template__field {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .capture-template__help-text {
-    color: gray;
-    font-size: 14px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+  color: gray;
+  font-size: 14px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .capture-template__letter-textfield {
-    width: 30px;
+  width: 30px;
 }
 
 .capture-template__field__or-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    color: lightgray;
-    font-size: 14px;
+  color: lightgray;
+  font-size: 14px;
 
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .capture-template__field__or-line {
-    width: 20px;
-    height: 1px;
-    background-color: #D8D8D8;
-    margin-left: 10px;
-    margin-right: 10px;
+  width: 20px;
+  height: 1px;
+  background-color: #d8d8d8;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .multi-textfields-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .multi-textfield-container {
-    width: 75%;
-    margin-top: 5px;
-p
-    display: flex;
+  width: 75%;
+  margin-top: 5px;
+  pdisplay: flex;
 }
 
 .multi-textfield-field {
-    font-family: Courier;
+  font-family: Courier;
 
-    flex: 1;
+  flex: 1;
 }
 
 .remove-multi-textfield-button {
-    color: gray;
-    border: 0;
-    background-color: transparent;
+  color: gray;
+  border: 0;
+  background-color: transparent;
 }
 
 .add-new-multi-textfield-button-container {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 5px;
-    margin-right: 8px;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 5px;
+  margin-right: 8px;
 }
 
 .add-new-multi-textfield-button {
-    background-color:#5E348C;
-    border: 0;
-    color: white;
-    width: 45px;
-    height: 45px;
+  background-color: #5e348c;
+  border: 0;
+  color: white;
+  width: 45px;
+  height: 45px;
 }
 
 .template-textarea {
-    border: 1px solid #D8D8D8;
+  border: 1px solid #d8d8d8;
 
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 .capture-template__delete-button-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .capture-template__delete-button {
-    background-color: #B90000;
+  background-color: #b90000;
 
-    margin-top: 15px;
-    margin-bottom: 0;
+  margin-top: 15px;
+  margin-bottom: 0;
 }
