--- a/src/components/LoadingIndicator/LoadingIndicator.css
+++ b/src/components/LoadingIndicator/LoadingIndicator.css
@@ -1,16 +1,16 @@
 .loading-indicator {
-    color: white;
-    background-color: #5E348C;
-    font-weight: bold;
-    opacity: 0.9;
-    padding: 18px;
-    display: inline-block;
-    position: fixed;
-    font-size: 20px;
-    left: 50%;
-    top: 85px;
-    width: 80%;
-    text-align: center;
-    transform: translateX(-50%);
-    z-index: 1;
+  color: white;
+  background-color: #5e348c;
+  font-weight: bold;
+  opacity: 0.9;
+  padding: 18px;
+  display: inline-block;
+  position: fixed;
+  font-size: 20px;
+  left: 50%;
+  top: 85px;
+  width: 80%;
+  text-align: center;
+  transform: translateX(-50%);
+  z-index: 1;
 }
