--- a/src/components/UI/Popup/Popup.css
+++ b/src/components/UI/Popup/Popup.css
@@ -1,36 +1,36 @@
 .popup-outer-container {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 
-    background-color: rgba(94, 52, 140, 0.1);
+  background-color: rgba(94, 52, 140, 0.1);
 }
 
 .popup-inner-container {
-    position: fixed;
-    left: 10px;
-    right: 10px;
-    top: 60px;
+  position: fixed;
+  left: 10px;
+  right: 10px;
+  top: 60px;
 
-    border: 2px solid #5E348C;
-    background-color: white;
-    box-shadow: 2px 2px 5px 0px rgba(148, 148, 148, 0.75);
+  border: 2px solid #5e348c;
+  background-color: white;
+  box-shadow: 2px 2px 5px 0px rgba(148, 148, 148, 0.75);
 
-    padding: 10px;
+  padding: 10px;
 
-    overflow-y: auto;
+  overflow-y: auto;
 }
 
 .popup__close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 
-    color: #5E348C;
+  color: #5e348c;
 
-    border: 0;
-    background-color: transparent;
-    padding: 0;
+  border: 0;
+  background-color: transparent;
+  padding: 0;
 }
