--- a/src/components/UI/TabButtons/TabButtons.css
+++ b/src/components/UI/TabButtons/TabButtons.css
@@ -1,23 +1,23 @@
 .tab-buttons {
-    display: inline-block;
-    border: 1px solid #D8D8D8;
-    height: 34px;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
+  display: inline-block;
+  border: 1px solid #d8d8d8;
+  height: 34px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
 }
 
 .tab-buttons__btn {
-    box-sizing: border-box;
-    height: 100%;
-    padding: 7px;
+  box-sizing: border-box;
+  height: 100%;
+  padding: 7px;
 }
 
 .entry-container--large-font .tab-buttons__btn {
-    padding: 5px;
+  padding: 5px;
 }
 
 .tab-buttons__btn--selected {
-    background-color: #5E348C;
-    color: white;
+  background-color: #5e348c;
+  color: white;
 }
